--- a/koreamgaem.html
+++ b/koreamgaem.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KOREAN GAME</title>
     <link rel="stylesheet" href="koreangame.css">
-    <script src="koreangame.js"></script>
+    <script src="koreangame.js" defer></script>
 </head>
 <body>
     <div class="container">
-        <button class="starter loading"> Start!</button>
-        <div class="world-display">바나나</div>
+        <button class="starter"> Start!</button>
+        <div class="world-display"></div>
         <div class="word-input-box">
             <input type="text"  class="word-input" required>
         </div>
