--- a/koreamgaem.html
+++ b/koreamgaem.html
@@ -13,7 +13,7 @@
         <button class="starter"> Start!</button>
         <div class="world-display"></div>
         <div class="word-input-box">
-            <input type="text"  class="word-input" required>
+            <input  type="text"  maxlength="3">
         </div>
         <div class="game-info">
             <div>
