--- a/koreamgaem.html
+++ b/koreamgaem.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <button class="starter"> Start!</button>
+        <button class="starter loading">loading..</button>
         <div class="world-display"></div>
         <div class="word-input-box">
-            <input  type="text"  maxlength="3">
+            <input  type="text" maxlength="3">
         </div>
         <div class="game-info">
             <div>
