--- a/koreamgaem.html
+++ b/koreamgaem.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KOREAN GAME</title>
+    <script src="https://kit.fontawesome.com/8607ff6224.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="koreangame.css">
     <script src="koreangame.js" defer></script>
 </head>
@@ -13,7 +14,7 @@
         <button class="starter loading">loading..</button>
         <div class="world-display"></div>
         <div class="word-input-box">
-            <input  type="text" maxlength="3">
+            <input  type="text" minlength="0" maxlength="3">
         </div>
         <div class="game-info">
             <div>
@@ -24,5 +25,6 @@
             </div>
         </div>
     </div>
+    <div class="message_result"></div>
 </body>
 </html>
