--- a/koreamgaem.html
+++ b/koreamgaem.html
@@ -25,6 +25,12 @@
             </div>
         </div>
     </div>
-    <div class="message_result"></div>
+    
+        <div class="message_container">
+            <div class="message_box">
+                <div class="message"></div>
+                <button class="replay_buttton"><i class="fas fa-reply"></i></button>
+            </div>
+        </div>
 </body>
 </html>
