JS : Replay button

--- a/koreamgaem.html
+++ b/koreamgaem.html
@@ -29,7 +29,7 @@
         <div class="message_container">
             <div class="message_box">
                 <div class="message"></div>
-                <button class="replay_buttton"><i class="fas fa-reply"></i></button>
+                <button class="replay_button"><i class="fas fa-reply"></i></button>
             </div>
         </div>
 </body>
