--- a/koreamgaem.html
+++ b/koreamgaem.html
@@ -25,12 +25,13 @@
             </div>
         </div>
     </div>
-    
+        
         <div class="message_container">
-            <div class="message_box">
+             <!-- <div class="message_box">
                 <div class="message"></div>
                 <button class="replay_button"><i class="fas fa-reply"></i></button>
-            </div>
+            </div>  -->
         </div>
+
 </body>
 </html>
