js : string templete is changed
since I can't get replay_button in string templete to th DOM ,
I wanted to make message box with prameter with string templete but I was impossible.
I wanted to find the way someday

--- a/koreamgaem.html
+++ b/koreamgaem.html
@@ -14,7 +14,7 @@
         <button class="starter loading">loading..</button>
         <div class="world-display"></div>
         <div class="word-input-box">
-            <input  type="text" minlength="0" maxlength="3">
+            <input  type="text">
         </div>
         <div class="game-info">
             <div>
@@ -27,10 +27,11 @@
     </div>
         
         <div class="message_container">
-             <!-- <div class="message_box">
+          
+            <div class="message_box">
                 <div class="message"></div>
                 <button class="replay_button"><i class="fas fa-reply"></i></button>
-             </div>  -->
+             </div>  
         </div>
 
 </body>
